fix issue with footer overlapping content

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -622,7 +622,7 @@ input[name='q']::placeholder {
 /*------------Footer------------*/
 
 footer {
-    position:absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 0px;
